add header component

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <link rel="stylesheet" href="dist/style/style.css">
 </head>
 <body>
-  <div id="app-root"></div>
-  <script src="dist/bundle.js"></script>
+  	<div id="app-root"></div>
+	<script type="text/javascript">
+		document.getElementsByTagName('html')[0].style.fontSize=  window.screen.width / 10 + 'px';
+	</script>
+  	<script src="dist/bundle.js"></script>
 </body>
 </html>
