--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
   <title>官房物业 | 找场地</title>
   <link rel="stylesheet" href="dist/style/style.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+  <link rel="stylesheet" href="http://cache.amap.com/lbs/static/main1119.css"/>
 </head>
 <body>
   	<div id="app-root"></div>
 	<script type="text/javascript">
 		document.getElementsByTagName('html')[0].style.fontSize=  window.screen.width / 10 + 'px';
 	</script>
+    <script src="http://cache.amap.com/lbs/static/es5.min.js"></script>
+    <script src="http://webapi.amap.com/maps?v=1.3&key=cd40a1148f63481dd1ca1cc3c30d384e"></script>
   	<script src="dist/bundle.js"></script>
 </body>
 </html>
