--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <title>官房物业 | 找场地</title>
-  <link rel="stylesheet" href="vendors/bootstrap.css" />
-  <link rel="stylesheet" href="style/style.css">
-  <link rel="stylesheet" type="text/css" href="vendors/slick.min.css" />
-  <link rel="stylesheet" type="text/css" href="vendors/slick-theme.min.css" />
-  <link rel="stylesheet" href="vendors/main1119.css"/>
+  <link rel="stylesheet" href="/vendors/bootstrap.css" />
+  <link rel="stylesheet" href="/style/style.css">
+  <link rel="stylesheet" type="text/css" href="/vendors/slick.min.css" />
+  <link rel="stylesheet" type="text/css" href="/vendors/slick-theme.min.css" />
+  <link rel="stylesheet" href="/vendors/main1119.css"/>
 </head>
 <body>
   	<div id="app-root"></div>
 	<script type="text/javascript">
 		document.getElementsByTagName('html')[0].style.fontSize=  window.screen.width / 10 + 'px';
 	</script>
-    <script src="vendors/es5.min.js"></script>
+    <script src="/vendors/es5.min.js"></script>
     <script src="http://webapi.amap.com/maps?v=1.3&key=cd40a1148f63481dd1ca1cc3c30d384e"></script>
-  	<script src="bundle.js"></script>
+  	<script src="/bundle.js"></script>
 </body>
 </html>
